# Keyboard-chaker_cpp

./: .gitignore  CMakeLists.txt  README.md
include/: keyboard_checker.h  log_config.h  logger.h
src/: keyboard_checker.cpp  main.cpp
